fix report on interactions

--- a/code/analysis.Rmd
+++ b/code/analysis.Rmd
@@ -109,5 +109,5 @@ According to the results, ...
 - Based on the results which you reported above, try and answer the research question: *Do participants show a preference for "know" vs "believe" depending on their gender and the scenario they are in?*.
 - To give you an example of what we are looking for, here is a short paragraph on interpreting the results from the Week 8 lecture on morphological parsing.
 
-> As suggested by the 95% CrI of the interaction term (in log-odds [-1.72, 0.42]) for constituent relation type and right-branching pairs, there is quite a lot of uncertainty in relation to the difference in probability of correct response in unrelated vs constituent in right-branching pairs, since the interval covers both negative and positive values. Moreover, the conditional posterior probabilities of unrelated and right-branching on the one hand and constituent and right branching on the other are very similar, as can be seen in the plot (and as suggested by the respective 95% CrIs: 90-97% vs 91-97% respectively).
+> As suggested by the 95% CrI of the interaction term (in log-odds [-1.72, 0.42]), there is quite a lot of uncertainty as to whether the difference in probability of correct response in unrelated vs constituent in right-branching pairs differs from that in left-branching pairs, since the interval covers both negative and positive values. Moreover, the conditional posterior probabilities of unrelated and right-branching on the one hand and constituent and right branching on the other are very similar, as can be seen in the plot above (and as suggested by the respective 95% CrIs: 90-97% vs 91-97% respectively).
 
