--- a/code/analysis.tex
+++ b/code/analysis.tex
@@ -67,7 +67,7 @@
 
 \title{QML - Formative Assessment 2}
 \author{YOUR EXAM NUMBER}
-\date{2023-11-09}
+\date{2023-11-10}
 
 \begin{document}
 \maketitle
@@ -286,15 +286,14 @@ According to the results, \ldots{}
 
 \begin{quote}
 As suggested by the 95\% CrI of the interaction term (in log-odds
-{[}-1.72, 0.42{]}) for constituent relation type and right-branching
-pairs, there is quite a lot of uncertainty in relation to the difference
-in probability of correct response in unrelated vs constituent in
-right-branching pairs, since the interval covers both negative and
-positive values. Moreover, the conditional posterior probabilities of
-unrelated and right-branching on the one hand and constituent and right
-branching on the other are very similar, as can be seen in the plot (and
-as suggested by the respective 95\% CrIs: 90-97\% vs 91-97\%
-respectively).
+{[}-1.72, 0.42{]}), there is quite a lot of uncertainty as to whether
+the difference in probability of correct response in unrelated vs
+constituent in right-branching pairs differs from that in left-branching
+pairs, since the interval covers both negative and positive values.
+Moreover, the conditional posterior probabilities of unrelated and
+right-branching on the one hand and constituent and right branching on
+the other are very similar, as can be seen in the plot above (and as
+suggested by the respective 95\% CrIs: 90-97\% vs 91-97\% respectively).
 \end{quote}
 
 \end{document}
